ailist/src/labeled_augmented_array.h

//-------------------------------------------------------------------------------------

typedef struct {
	int64_t nr, mr;						// Number of intervals
	int64_t nl, ml;						// Number of unique labels
	labeled_interval_t *interval_list;	// List of interval_t objects
	int *nc;							// Number of components
	int *lenC;							// Length of components
	int *idxC;							// Index of components in interval_list
	uint32_t *maxE;						// Augmentation
	uint32_t *first;					// Record first position of intervals
	uint32_t *last;						// Record last position of intervals
	uint32_t *label_count;				// Record number of label values
	uint32_t *id_index;					// Record id index values
	void *label_map;					// Hash table to convert labels to int
	void *rev_label_map;				// Hash table to convert labels to int
} labeled_aiarray_t;
typedef struct {
	int size;							// Current size
    int max_size;						// Maximum size
	labeled_aiarray_t *ail;				// Store labeled_aiarray
	long *indices;						// Store indices
} overlap_label_index_t;
typedef struct {
	labeled_aiarray_t *ail;				// Labeled array
	uint16_t label;						// Label
	int nc;								// Number of components
	int label_start;					// First index for label
	int label_end;						// Last index for label
	int *label_comp_bounds;				// Label component bounds
	int *label_comp_used;				// Components used
	labeled_interval_t *intv;			// Interval
	int n;								// Current position
} label_sorted_iter_t;
//-------------------------------------------------------------------------------------
// labeled_augmented_array.c
//=====================================================================================

// Initialize aiarray_t
labeled_aiarray_t *labeled_aiarray_init(void);
// Free aiarray data
void labeled_aiarray_destroy(labeled_aiarray_t *ail);
// Print aiarray
void labeled_display_list(labeled_aiarray_t *ail);
// Print label map
void display_label_map(labeled_aiarray_t *ail);
// Calculate maximum length
int labeled_aiarray_max_length(labeled_aiarray_t *ail);
// Calculate length distribution
void labeled_aiarray_length_distribution(labeled_aiarray_t *ail, int distribution[]);
//-------------------------------------------------------------------------------------
// overlap_label_index.c
//=====================================================================================

// Initialize overlap_label_index_t
overlap_label_index_t *overlap_label_index_init(void);
// Free overlap_label_index memory
void overlap_label_index_destroy(overlap_label_index_t *oi);
// Add interval and index to overlap_label_index
void overlap_label_index_add(overlap_label_index_t *aq, labeled_interval_t i, const char *label_name);
//-------------------------------------------------------------------------------------
// labeled_aiarray_add.c
//=====================================================================================

// Add a interval_t from array
void labeled_aiarray_from_array(labeled_aiarray_t *ail, const long starts[], const long ends[], const char label_names[], int length, int label_str_len);
// Add a interval_t interval
void labeled_aiarray_add(labeled_aiarray_t *ail, uint32_t start, uint32_t end, const char *label_name);
// Add intervals from another labeled_aiarray
void labeled_aiarray_append(labeled_aiarray_t *ail, labeled_aiarray_t *ail2);
//-------------------------------------------------------------------------------------
// labeled_aiarray_get.c
//=====================================================================================

// Determine if label_name is in array
int label_is_present(labeled_aiarray_t *ail, const char *label_name);
// Query label map for label name
uint16_t query_label_map(labeled_aiarray_t *ail, const char *label_name);
// Query rev_label_map for label
const char *query_rev_label_map(labeled_aiarray_t *ail, uint16_t label);
// Get intervals with label name
labeled_aiarray_t *get_label(labeled_aiarray_t *ail, const char *label_name);
// Get intervals with label name and original index
overlap_label_index_t *get_label_with_index(labeled_aiarray_t *ail, const char *label_name);
// Get intervals with labels names from array
labeled_aiarray_t *get_label_array(labeled_aiarray_t *ail, const char *label_names[], int length);
// Get intervals with labels from array and original index
overlap_label_index_t *get_label_array_with_index(labeled_aiarray_t *ail, const char label_names[], int n_labels, int label_str_len);
// Get index start of label
int get_label_index(labeled_aiarray_t *ail, int label);
// Determine label indices
void get_label_index_array(labeled_aiarray_t *ail, int *label_index);
// Get ids for labels in a label array
void get_label_array_ids(labeled_aiarray_t *ail, const char *label_names[], int n_labels, long index[]);
// Determine if an index is of a label array
void get_label_array_presence(labeled_aiarray_t *ail, const char label_names[], int n_labels, uint8_t index[], int label_str_len);
//-------------------------------------------------------------------------------------
// labeled_aiarray_construct.c
//=====================================================================================

// Sort intervals in aiarray
void labeled_aiarray_sort(labeled_aiarray_t *ail);
// Sort intervals by label
void labeled_aiarray_radix_label_sort(labeled_aiarray_t *ail);
// Construct aiarray: decomposition and augmentation
void labeled_aiarray_construct(labeled_aiarray_t *ail, int cLen_init);
//-------------------------------------------------------------------------------------
// labeled_aiarray_iter.c
//=====================================================================================

// Get component index for label
int *get_label_comp_bounds(labeled_aiarray_t *ail, int label);
label_sorted_iter_t *iter_init(labeled_aiarray_t *ail, const char *label_name);
int iter_next(label_sorted_iter_t *iter);
void iter_destroy(label_sorted_iter_t *iter);
//-------------------------------------------------------------------------------------
// labeled_aiarray_match.c
//=====================================================================================

overlap_label_index_t *has_exact_match(labeled_aiarray_t *ail1, labeled_aiarray_t *ail2);
//-------------------------------------------------------------------------------------
// labeled_aiarray_index.c
//=====================================================================================

// Record id positions by id
void labeled_aiarray_cache_id(labeled_aiarray_t *ail);
// Get intervals with ids
labeled_aiarray_t *labeled_aiarray_slice_index(labeled_aiarray_t *ail, const long ids[], int length);
// Get intervals with range
labeled_aiarray_t *labeled_aiarray_slice_range(labeled_aiarray_t *ail, int start, int end, int step);
// Get intervals with boolean array
labeled_aiarray_t *labeled_aiarray_slice_bool(labeled_aiarray_t *ail, uint8_t bool_index[]);
// Get interval with id
labeled_interval_t *labeled_aiarray_get_id(labeled_aiarray_t *ail, int id_value);
// Index aiarray by another aiarray inplace
int labeled_aiarray_index_by_aiarray_inplace(labeled_aiarray_t *ail1, labeled_aiarray_t *ail2);
//-------------------------------------------------------------------------------------
// labeled_aiarray_query.c
//=====================================================================================

// Binary search
uint32_t binary_search_labeled(labeled_interval_t* As, uint32_t idxS, uint32_t idxE, uint32_t qe);
// Base query logic
void labeled_aiarray_query(labeled_aiarray_t *ail, labeled_aiarray_t *overlaps, uint32_t qs, uint32_t qe, const char *label_name);
// Base query logic filtered by length
void labeled_aiarray_query_length(labeled_aiarray_t *ail, labeled_aiarray_t *overlaps, uint32_t qs, uint32_t qe, const char *label_name, int min_length, int max_length);
// Base query logic for nhits
void labeled_aiarray_query_nhits(labeled_aiarray_t *ail, long *nhits, uint32_t qs, uint32_t qe, const char *label_name);
// Base query logic for nhits filtered by length
void labeled_aiarray_query_nhits_length(labeled_aiarray_t *ail, long *nhits, uint32_t qs, uint32_t qe, const char *label_name, int min_length, int max_length);
// Base query logic with index
void labeled_aiarray_query_with_index(labeled_aiarray_t *ail, overlap_label_index_t *overlaps, uint32_t qs, uint32_t qe, const char *label_name);
// Base query logic with index
void labeled_aiarray_query_only_index(labeled_aiarray_t *ail, array_query_t *overlaps, uint32_t qs, uint32_t qe, uint32_t id, const char *label_name);
// Base query logic if present
void labeled_aiarray_query_has_hit(labeled_aiarray_t *ail, uint8_t has_hit[], uint32_t qs, uint32_t qe, const char *label_name);
// Query interval
labeled_aiarray_t *labeled_aiarray_query_single(labeled_aiarray_t *ail, uint32_t qs, uint32_t qe, const char *label_name);
// Query aiarray intervals of a length
labeled_aiarray_t *labeled_aiarray_query_single_length(labeled_aiarray_t *ail, uint32_t qs, uint32_t qe, const char *label_name, int min_length, int max_length);
// Query aiarray intervals from arrays
array_query_t *labeled_aiarray_query_from_array(labeled_aiarray_t *ail, const long starts[], const long ends[], const char label_names[], int length, int label_str_len);
//-------------------------------------------------------------------------------------
// labeled_aiarray_nhits.c
//=====================================================================================

// Determine number of hits for interval
long labeled_aiarray_nhits(labeled_aiarray_t *ail, long start, long end, const char *label_name);
// Calculate Window Protection Score
void labeled_aiarray_wps(labeled_aiarray_t *ail, double wps[], uint32_t protection);
// Calculate coverage
void labeled_aiarray_coverage(labeled_aiarray_t *ail, double coverage[]);
//-------------------------------------------------------------------------------------
// labeled_aiarray_merge.c
//=====================================================================================

// Merge nearby intervals
labeled_aiarray_t *labeled_aiarray_merge(labeled_aiarray_t *ail, uint32_t gap);