ailist/LabeledIntervalArray_core.pxd

import numpy as np
cimport numpy as np
cimport cython
from libc.stdint cimport uint32_t, int32_t, int64_t, uint16_t
from libc.stdlib cimport malloc, free
from .LabeledInterval_core cimport *
from .array_query_core cimport *
ctypedef np.uint8_t uint8


cdef extern from "src/labeled_augmented_array.c":
	# C is include here so that it doesn't need to be compiled externally
	pass

cdef extern from "src/overlap_label_index.c":
	# C is include here so that it doesn't need to be compiled externally
	pass

cdef extern from "src/labeled_aiarray_add.c":
	# C is include here so that it doesn't need to be compiled externally
	pass

cdef extern from "src/labeled_aiarray_get.c":
	# C is include here so that it doesn't need to be compiled externally
	pass

cdef extern from "src/labeled_aiarray_construct.c":
	# C is include here so that it doesn't need to be compiled externally
	pass

cdef extern from "src/labeled_aiarray_index.c":
	# C is include here so that it doesn't need to be compiled externally
	pass

cdef extern from "src/labeled_aiarray_query.c":
	# C is include here so that it doesn't need to be compiled externally
	pass

cdef extern from "src/labeled_aiarray_has_hit.c":
	# C is include here so that it doesn't need to be compiled externally
	pass

cdef extern from "src/labeled_aiarray_nhits.c":
	# C is include here so that it doesn't need to be compiled externally
	pass

cdef extern from "src/labeled_aiarray_wps.c":
	# C is include here so that it doesn't need to be compiled externally
	pass

cdef extern from "src/labeled_aiarray_coverage.c":
	# C is include here so that it doesn't need to be compiled externally
	pass

cdef extern from "src/labeled_aiarray_merge.c":
	# C is include here so that it doesn't need to be compiled externally
	pass

cdef extern from "src/labeled_aiarray_filter.c":
	# C is include here so that it doesn't need to be compiled externally
	pass

cdef extern from "src/labeled_aiarray_extract.c":
	# C is include here so that it doesn't need to be compiled externally
	pass

cdef extern from "src/labeled_aiarray_iter.c":
	# C is include here so that it doesn't need to be compiled externally
	pass

cdef extern from "src/labeled_aiarray_match.c":
	# C is include here so that it doesn't need to be compiled externally
	pass

cdef extern from "src/khash.h":
	# C is include here so that it doesn't need to be compiled externally
	pass

cdef extern from "src/labeled_augmented_array.h":

	ctypedef struct labeled_aiarray_t:
		int64_t nr							# Number of intervals
		int64_t mr							# Max number of intervals
		int64_t nl							# Number of unique labels
		int64_t ml							# Max number of unique labels
		labeled_interval_t *interval_list	# List of interval_t objects
		int *nc								# Number of components
		int *lenC							# Length of components
		int *idxC							# Index of components in interval_list
		uint32_t *maxE						# Augmentation
		uint32_t *first						# Record first position of intervals
		uint32_t *last						# Record last position of intervals
		uint32_t *label_count				# Record number of label values
		void *label_map						# Hash table to convert labels to int
		void *rev_label_map					# Hash table to convert labels to int
	
	# C overlap_label_index struct
	ctypedef struct overlap_label_index_t:
		int size							# Current size
		int max_size						# Maximum size
		labeled_aiarray_t *ail				# Store labeled_aiarray
		long *indices						# Store indices

	ctypedef struct label_sorted_iter_t:
		labeled_aiarray_t *ail				# Labeled array
		uint16_t label						# Label
		int nc								# Number of components
		int label_start						# First index for label
		int label_end						# Last index for label
		int *label_comp_bounds				# Label component bounds
		int *label_comp_used				# Components used
		labeled_interval_t *intv			# Interval
		int n								# Current position


	#-------------------------------------------------------------------------------------
	# labeled_augmented_array.c
	#=====================================================================================

	# Initialize aiarray_t
	labeled_aiarray_t *labeled_aiarray_init() nogil

	# Free aiarray data
	void labeled_aiarray_destroy(labeled_aiarray_t *ail) nogil

	# Print aiarray
	void labeled_display_list(labeled_aiarray_t *ail) nogil

	# Print label map
	void display_label_map(labeled_aiarray_t *ail) nogil

	# Calculate maximum length
	int labeled_aiarray_max_length(labeled_aiarray_t *ail) nogil

	# Calculate length distribution
	void labeled_aiarray_length_distribution(labeled_aiarray_t *ail, int distribution[]) nogil


	#-------------------------------------------------------------------------------------
	# overlap_label_index.c
	#=====================================================================================

	# Initialize overlap_label_index_t
	overlap_label_index_t *overlap_label_index_init() nogil

	# Free overlap_label_index memory
	void overlap_label_index_destroy(overlap_label_index_t *oi) nogil

	# Add interval and index to overlap_label_index
	void overlap_label_index_add(overlap_label_index_t *aq, labeled_interval_t i, const char *label_name) nogil


	#-------------------------------------------------------------------------------------
	# labeled_aiarray_add.c
	#=====================================================================================

	# Add a interval_t from array
	void labeled_aiarray_from_array(labeled_aiarray_t *ail, const long starts[], const long ends[], const char label_names[], int length, int label_str_len) nogil

	# Add a interval_t interval
	void labeled_aiarray_add(labeled_aiarray_t *ail, uint32_t start, uint32_t end, const char *label_name) nogil

	# Add intervals from another labeled_aiarray
	void labeled_aiarray_append(labeled_aiarray_t *ail, labeled_aiarray_t *ail2) nogil


	#-------------------------------------------------------------------------------------
	# labeled_aiarray_get.c
	#=====================================================================================

	# Determine if label_name is in array
	int label_is_present(labeled_aiarray_t *ail, const char *label_name) nogil

	# Query label map for label name
	uint16_t query_label_map(labeled_aiarray_t *ail, const char *label_name) nogil

	# Query rev_label_map for label
	const char *query_rev_label_map(labeled_aiarray_t *ail, uint16_t label) nogil

	# Get intervals with label name
	labeled_aiarray_t *get_label(labeled_aiarray_t *ail, const char *label_name) nogil

	# Get intervals with label name and original index
	overlap_label_index_t *get_label_with_index(labeled_aiarray_t *ail, const char *label_name) nogil

	# Get intervals with labels names from array
	labeled_aiarray_t *get_label_array(labeled_aiarray_t *ail, const char *label_names[], int length) nogil

	# Get intervals with labels from array and original index
	overlap_label_index_t *get_label_array_with_index(labeled_aiarray_t *ail, const char label_names[], int n_labels, int label_str_len) nogil

	# Get index start of label
	int get_label_index(labeled_aiarray_t *ail, int label) nogil

	# Determine label indices
	void get_label_index_array(labeled_aiarray_t *ail, int *label_index) nogil

	# Get ids for labels in a label array
	void get_label_array_ids(labeled_aiarray_t *ail, const char *label_names[], int n_labels, long index[]) nogil

	# Determine if an index is of a label array
	void get_label_array_presence(labeled_aiarray_t *ail, const char label_names[], int n_labels, uint8 index[], int label_str_len) nogil


	#-------------------------------------------------------------------------------------
	# labeled_aiarray_construct.c
	#=====================================================================================

	# Sort intervals in aiarray
	void labeled_aiarray_sort(labeled_aiarray_t *ail) nogil

	# Sort intervals by label
	void labeled_aiarray_radix_label_sort(labeled_aiarray_t *ail) nogil

	# Construct aiarray: decomposition and augmentation
	void labeled_aiarray_construct(labeled_aiarray_t *ail, int cLen_init) nogil


	#-------------------------------------------------------------------------------------
	# labeled_aiarray_iter.c
	#=====================================================================================

	# Get component index for label
	int *get_label_comp_bounds(labeled_aiarray_t *ail, int label) nogil

	label_sorted_iter_t *iter_init(labeled_aiarray_t *ail, const char *label_name) nogil

	int iter_next(label_sorted_iter_t *iterator) nogil

	void iter_destroy(label_sorted_iter_t *iterator) nogil


	#-------------------------------------------------------------------------------------
	# labeled_aiarray_match.c
	#=====================================================================================

	overlap_label_index_t *has_exact_match(labeled_aiarray_t *ail1, labeled_aiarray_t *ail2) nogil

	#-------------------------------------------------------------------------------------
	# labeled_aiarray_index.c
	#=====================================================================================

	# Record id positions by id
	void labeled_aiarray_cache_id(labeled_aiarray_t *ail) nogil

	# Get intervals with ids
	labeled_aiarray_t *labeled_aiarray_slice_index(labeled_aiarray_t *ail, const long ids[], int length) nogil

	# Get intervals with range
	labeled_aiarray_t *labeled_aiarray_slice_range(labeled_aiarray_t *ail, int start, int end, int step) nogil

	# Get intervals with boolean array
	labeled_aiarray_t *labeled_aiarray_slice_bool(labeled_aiarray_t *ail, uint8 bool_index[]) nogil

	# Get interval with id
	labeled_interval_t *labeled_aiarray_get_id(labeled_aiarray_t *ail, int id_value) nogil

	# Index aiarray by another aiarray inplace
	int labeled_aiarray_index_by_aiarray_inplace(labeled_aiarray_t *ail1, labeled_aiarray_t *ail2) nogil


	#-------------------------------------------------------------------------------------
	# labeled_aiarray_query.c
	#=====================================================================================

	# Binary search
	uint32_t binary_search_labeled(labeled_interval_t* As, uint32_t idxS, uint32_t idxE, uint32_t qe) nogil

	# Base query logic
	void labeled_aiarray_query(labeled_aiarray_t *ail, labeled_aiarray_t *overlaps, uint32_t qs, uint32_t qe, const char *label_name) nogil

	# Base query logic filtered by length
	void labeled_aiarray_query_length(labeled_aiarray_t *ail, labeled_aiarray_t *overlaps, uint32_t qs, uint32_t qe, const char *label_name, int min_length, int max_length) nogil

	# Base query logic for nhits
	void labeled_aiarray_query_nhits(labeled_aiarray_t *ail, long *nhits, uint32_t qs, uint32_t qe, const char *label_name) nogil

	# Base query logic for nhits filtered by length
	void labeled_aiarray_query_nhits_length(labeled_aiarray_t *ail, long *nhits, uint32_t qs, uint32_t qe, const char *label_name, int min_length, int max_length) nogil

	# Base query logic with index
	void labeled_aiarray_query_with_index(labeled_aiarray_t *ail, overlap_label_index_t *overlaps, uint32_t qs, uint32_t qe, const char *label_name) nogil

	# Base query logic with index
	void labeled_aiarray_query_only_index(labeled_aiarray_t *ail, array_query_t *overlaps, uint32_t qs, uint32_t qe, uint32_t id_value, const char *label_name) nogil

	# Base query logic if present
	void labeled_aiarray_query_has_hit(labeled_aiarray_t *ail, uint8 has_hit[], uint32_t qs, uint32_t qe, const char *label_name) nogil

	# Query interval
	labeled_aiarray_t *labeled_aiarray_query_single(labeled_aiarray_t *ail, uint32_t qs, uint32_t qe, const char *label_name) nogil

	# Query aiarray intervals of a length
	labeled_aiarray_t *labeled_aiarray_query_single_length(labeled_aiarray_t *ail, uint32_t qs, uint32_t qe, const char *label_name, int min_length, int max_length) nogil

	# Query aiarray intervals from arrays
	array_query_t *labeled_aiarray_query_from_array(labeled_aiarray_t *ail, const long starts[], const long ends[], const char label_names[], int length, int label_str_len) nogil
